fix wrapping on rows

--- a/shortages/scraping/static/main.css
+++ b/shortages/scraping/static/main.css
@@ -7,6 +7,7 @@ table td {
 }
 #drugs li {
 	display: block;
+    overflow: hidden;
     background: #eee;
     padding: 3px;
 }
